<resources>
    <string name="app_name">Nettox Wapps</string>

    <!-- Shared Preference Manager and Keys -->
    <string name="PRF_MAIN_KEY">"MyPref"</string>

    <string name="PRF_TUTORIAL">"TutorialDone"</string>
    <string name="PRF_USER_NAME">"User.Name"</string>
    <string name="PRF_USER_AGE">"User.Age"</string>
    <string name="PRF_USER_GENDER">"User.Gender"</string>

    <!--splash screen layout string-->
    <string name="gears">gears</string>

    <!-- pre app layout string -->
    <string name="version">1.0.0</string>
    <string name="ver">Ver.</string>

    <string name="clockpng_desc">clock.png that used in pre app activity</string>
    <string name="titlepng_desc">title.png that used in pre app activity</string>
    <string name="linepng_desc">line.png that used in pre app activity</string>
    <string name="subtitlepng_desc">subtitle.png that used in pre app activity</string>
    <string name="btn_loginpng_desc">btn_login.png that used in pre app activity</string>
    <string name="btn_registerpng_desc">btn_register.png that used in pre app activity</string>

    <string name="img_pressstart_desc">press_start.png that used in pre app activity</string>

    <!-- login layout string -->
    <string name="logintitlepng_desc">logintitle.png that used in login activity</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="btnloginlongpng_desc">btn_login_long.png that used in login activity</string>
    <string name="forgotaccount">Forgot your account?</string>
    <string name="recover">Reset here.</string>

    <!-- register layout string -->
    <string name="registertitlepng_desc">registertitle.png that used in login activity</string>
    <!-- duplicated in login layout
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    -->
    <string name="fullname_hint">Full Name</string>
    <string name="repassword_hint">Re-Enter Password</string>
    <string name="btnregisterlongpng_desc">btn_register_long.png that used in login activity</string>

    <!-- reset password layout string -->
    <string name="ordertorecover">In order to recover your account, you must enter your valid email address. After this we will send an email to your mailbox to reset your account\'s password.</string>

    <!-- main layout string -->
    <string name="static_Id">ID</string>
    <string name="static_Watch">Watch:</string>
    <string name="static_percentage">%</string>
    <string name="static_YP_LastSleep">Your phone last sleep:</string>
    <string name="static_minutes">minute(s).</string>
    <string name="static_YP_Usage">Your phone usage:</string>
    <string name="static_BPM">BPM</string>
    <string name="heartwhite_desc">heart_white.png that used in main activity</string>
    <string name="btnanalyze_desc">btn_analyze_small.png that used in main activity</string>
    <string name="btnmonitoringresult_desc">btn_monitoringR_small.png that used in main activity</string>
    <string name="btnsettingsconfig_desc">btn_settings_config.png that used in main activity</string>
    <string name="btnhelpmenu_desc">btn_helpmenu.png that used in main activity</string>
    <string name="static_pleaseWait">Please wait...</string>
    <string name="scanattention">Let\'s take a look you body condition by  measure your blood pressure and have your  HRV result!
        \n\nPress the button below!</string>

    <string name="result1">You have good health, sir! I have record the data into our apps so you can check it anytime.
        \n\nWhile it’s good being a healthy person, i prefer to suggest you to aid yourself with more social interact.</string>
    <string name="no_items_is_showed">No items is showed.</string>

    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_message">This app does not use location information, but scanning for Bluetooth LE devices requires this permission</string>
    <string name="location_denied_title">Location permission denied</string>
    <string name="location_denied_message">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
    <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>
    <string name="devices">NettoxWapps</string>
</resources>
