<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PreAppActivity">

    <ImageView
        android:id="@+id/imgV_preapp_clock"
        android:layout_width="250dp"
        android:layout_height="251dp"
        android:contentDescription="@string/clockpng_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/clock" />

    <ImageView
        android:id="@+id/imgV_preapp_title"
        android:layout_width="231dp"
        android:layout_height="129dp"
        android:contentDescription="@string/titlepng_desc"
        app:layout_constraintBottom_toBottomOf="@+id/imgV_preapp_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgV_preapp_clock"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/imgV_preapp_line"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/linepng_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgV_preapp_clock"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/imgV_preapp_subtitle"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/subtitlepng_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgV_preapp_line"
        app:srcCompat="@drawable/subtitle" />

    <ImageView
        android:id="@+id/imgV_preapp_pressStart"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/img_pressstart_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/press_start" />

    <TextView
        android:id="@+id/textV_preapp_staticVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ver"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textV_preapp_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/version"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textV_preapp_staticVersion" />

    <TextView
        android:id="@+id/textV_preapp_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Registered/Unregistered" />

</android.support.constraint.ConstraintLayout>