<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/textV_reset_order"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/ordertorecover"
        android:textColor="@color/colorDarkBrown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editT_reset_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textV_reset_order" />

    <ImageView
        android:id="@+id/imgV_reset_btnresetlong"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/registertitlepng_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT_reset_email"
        app:srcCompat="@drawable/btn_reset_long" />
</android.support.constraint.ConstraintLayout>